{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerAction",
            "id": "e13e3ea2-bf69-49ce-90c3-eaf98b1d55bd",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "9f10084c-f940-43df-aa40-5d2c42fb3bec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "88241b51-8f1c-40ec-94b0-7d18998cf3ff",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "82243ff0-9057-4d02-843c-98e00f81142b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b491c494-7401-4725-a678-d1ae69a04c50",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}